--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js",
-    "build":" npm install && npm install --prefix client && npm run build --prefix  "
+    "build":" npm install && npm install --prefix client && npm run build --prefix client "
   },
   "author": "",
   "license": "ISC",
