--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "aos": "^2.3.4",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "react": "^18.2.0",
