--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO = "mongodb+srv://ahmaadaabdo:Ahmed1612@market-place.ydxfvxh.mongodb.net/maret-place?retryWrites=true&w=majority"
+MONGO = ""
 JWT_SECRET = "biurgigher8489=ovre_*5**5wdwo>"
