--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.4"
   },
@@ -34,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-rewrite-all": "^1.0.2"
   }
 }
